Fixed footer logo

--- a/projects/chamber/thankyou.html
+++ b/projects/chamber/thankyou.html
@@ -58,7 +58,9 @@
     </main>
 
     <footer>
-        <img id="footer-logo" src="images/fulllogo.webp" alt="Logo image">
+        <a href="index.html">
+            <img id="footer-logo" src="images/fulllogo.webp" alt="Logo image">
+        </a>        
         <div id="Content-1">
             <p> LethoCom chamber of Commerce </p>
             <h2> 10 Rue De Le Paix </h2> 
