--- a/projects/chamber/404.html
+++ b/projects/chamber/404.html
@@ -51,7 +51,7 @@
 
     <main id="main-404">
         <p>Nothing is here.</p>
-        
+
         <a href="index.html">
             <img src="images/wilderness.jpg" alt="wilderness img">
         </a>
@@ -62,7 +62,9 @@
     </main>
 
     <footer>
-        <img id="footer-logo" src="images/fulllogo.webp" alt="Logo image">
+        <a href="index.html">
+            <img id="footer-logo" src="images/fulllogo.webp" alt="Logo image">
+        </a>        
         <div id="Content-1">
             <p> LethoCom chamber of Commerce </p>
             <h2> 10 Rue De Le Paix </h2> 
