Fixed all further errors

--- a/projects/chamber/contact.html
+++ b/projects/chamber/contact.html
@@ -68,7 +68,7 @@
 
                 <div>
                     <label for="preference">Contact Preference: </label>
-                    <select name="preference" required>
+                    <select name="preference" id="preference" required>
                         <option value>Choose...</option>
                         <option value>Phone </option>
                         <option value>Email </option>
