Maybe that will fix it?

--- a/projects/chamber/index.html
+++ b/projects/chamber/index.html
@@ -81,7 +81,7 @@
         <div id="weather-box">
             <p>Weather</p>
             <div id="top-weather">
-                <img id="weather-icon" />
+                <img src="images/fulllogo.webp" alt="empty" id="weather-icon" />
                 <span id="wind-temp"></span>
             </div>
             <span id="weather-type"></span>
