Fixed spelling mistake

--- a/projects/chamber/404.html
+++ b/projects/chamber/404.html
@@ -57,7 +57,7 @@
         </a>
 
         <h2>It seems that you have found a page that doesnt exist.</h2>
-        <h2>Please come back to lethrbidge.</h2>
+        <h2>Please come back to lethbridge.</h2>
 
     </main>
 
