--- a/projects/chamber/contact.html
+++ b/projects/chamber/contact.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="This is the main page of my site. It is meant to introduce people to the local
     community of lethbridge. Either as tourists, prospecting housekeepers, or business owners.">
+    <link type="text/css" rel="stylesheet" href="styles/normalize.css">
     <link type="text/css" rel="stylesheet" href="styles/base.css">
     <link type="text/css" rel="stylesheet" href="styles/medium.css">
     <link type="text/css" rel="stylesheet" href="styles/large.css">
