--- a/projects/Final project/index.html
+++ b/projects/Final project/index.html
@@ -24,9 +24,13 @@
         <ul class="primaryNav">
             <li><a href="index.html">Home</a></li>
             <hr class="baseline">
-            <li><a href="about-us.html">About us</a></li>
-            <li><a href="fresh.html">Fresh</a></li>
-            <li><a href="resource.html">Resorce</a></li>
+
+            <div class="lowerNav">
+                <li><a href="about-us.html">About us</a></li>
+                <li><a href="fresh.html">Fresh</a></li>
+                <li><a href="resource.html">Resorce</a></li>
+            </div>
+            
         </ul>
         <hr class="mediumline">
 
