Finished smallest veiwport.

--- a/projects/Final project/Planning document.html
+++ b/projects/Final project/Planning document.html
@@ -135,7 +135,7 @@
             Website Logo
         </h1>
 
-        <img class="centered" src="images/logo.png" alt="logo">
+        <img class="centered" src="images/Icons/logo.png" alt="logo">
 
     </main>
 
