--- a/projects/Final project/index.html
+++ b/projects/Final project/index.html
@@ -34,20 +34,20 @@
         <hr class="mediumline">
 
         <dic class="icons">
-            <a href="https://www.facebook.com/" target="_blank">
+            <a class="facebook" href="https://www.facebook.com/" target="_blank">
                 <img src="images/icons/facebook.png" alt="facebook icon">
             </a>
-            <a href="https://www.instagram.com/" target="_blank">
+            <a class="instagram" href="https://www.instagram.com/" target="_blank">
                 <img src="images/icons/instagram.png" alt="instagram icon">
             </a>
-            <a href="https://www.linkedin.com/" target="_blank">
+            <a class="linkedin" href="https://www.linkedin.com/" target="_blank">
                 <img src="images/icons/linkedin.png" alt="linkedin icon">
             </a>
         </dic>
     </header>
 
-    <main>
-        <div> 
+    <main id="index-main">
+        <div id="coastal-div"> 
             <img src="images/photos/coast.png" alt="coast-image">
             <p>Los Angels is a beautiful city, the second largest in the United States of America
                 and home to the hollywood empire. But no cinematic action can compare to the beautiy 
@@ -56,23 +56,25 @@
             </p>
         </div>
         <div id="weather-div">
-            <h1>Weather</h1>
-            <div id="top-weather">
-                <img src="images/Icons/logo.png" alt="empty" id="weather-icon">
-                <span id="wind-temp"></span>
-            </div>
-            <div id="middle-weather"> 
-                <span id="weather-type"></span>
-                <hr>
-                <span id="humidity"></span>
+            <div id="weather-box">
+                <h1>Weather</h1>
+                <div id="top-weather">
+                    <img src="images/Icons/logo.png" alt="empty" id="weather-icon">
+                    <span id="wind-temp"></span>
+                </div>
+                <div id="middle-weather"> 
+                    <span id="weather-type"></span>
+                    <hr>
+                    <span id="humidity"></span>
+                </div>
             </div>
             <section id="weather-section"> 
                 <!-- This is where we will put the days and temperature using javascript -->
             </section>
         </div>
-        <div>
-            <img src="images/photos/smoothie.png">
-            <p>Above are two of our most satisfying beverages, zesty mango, and berry blend. 
+        <div id="fruit-div">
+            <img id="fruit-img" src="images/photos/smoothie.png">
+            <p id="fruit-paragraph">Above are two of our most satisfying beverages, zesty mango, and berry blend. 
                 Bountiful foods offers a collection of farm grown smoothie options, full of 
                 nutritious organic ingredients, and a punch of flavor. These will keep your health
                 and your tastebuds happy. Beyond premade classic smoothies, we encourage designing 
@@ -80,7 +82,7 @@
             </p>
             <button id="drinks-button" onclick="window.location.href='fresh.html'">Get drink here!</button>
         </div>
-        <div> 
+        <div id="number-div"> 
             <!-- TODO: Use code in js to add ordered by {person's name} -->
             <p>Current Number of drinks ordered</p> 
             <p id="drinks-number">0</p>
@@ -90,12 +92,13 @@
     <footer>
         <h1> Contact us </h1>
         <hr>
-        <p>Bountiful Foods</p>
-        <p>Adress: 1645 S Vermont Ave</p>
-        <p>Los Angeles, CA 90007, United States</p>
-        <p>Phone number: 323-759-8873</p>
-
-        <a href="resource.html">References</a>
+        <div> 
+            <p>Bountiful Foods</p>
+            <p>Adress: 1645 S Vermont Ave</p>
+            <p>Los Angeles, CA 90007, United States</p>
+            <p>Phone number: 323-759-8873</p>
+            <a href="resource.html">References</a>
+        </div>
     </footer>
 
     <script src="scripts/index.js"></script>
