--- a/projects/Final project/about-us.html
+++ b/projects/Final project/about-us.html
@@ -47,7 +47,37 @@
     </header>
 
     <main>
-        
+        <!-- ! This whole page is supposed to act as a sort of short advertisment to show off why Bountiful Foods is such a good company.  -->
+        <div>
+            <h1>Bountiful Foods</h1>
+            <img id="fruit-basket-img" src="images/photos/fruit-basket.jpg" alt="fruit-basket">
+            <p>For the past 50 years bountiful foods has helped local farmers help market 
+                fresh produce from the green coasts of Los Angeles. We have had a great impact
+                on the health and lively hood of people all throughout the Western states. 
+                We have a strong culture of commitment and responsibility. And our partners have 
+                been leading the industry of farming for many years now. 
+                We hope that you can become a part of our evergrowing community, and help sustain
+                the organic farms of Bountiful foods. 
+            </p>
+            <hr id="about-us-divider">
+            <h2>Contact information</h2>
+            <div>
+                <p>Hellen Mcgregory: CEO</p>
+                <p>Email: Hellengory@gmail.com</p>
+                <p>Phone number: 323-583-4892</p>
+            </div>
+            <div>
+                <p>Person Mann: Human resources manager</p>
+                <p>Email: Permann@gmail.com</p>
+                <p>Phone number: 323-293-2357</p>
+            </div>
+            <div>
+                <p>Jamie Hennnings: Vice President</p>
+                <p>Email: Catwild@hotmail.com</p>
+                <p>Phone number: 323-294-1569</p>
+            </div>
+            <h3>Location</h3>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3306.0356114363294!2d-118.29186980000001!3d34.04295760000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c78ee3a18c55%3A0x7dc50921cdef2be7!2s1645%20S%20Vermont%20Ave%2C%20Los%20Angeles%2C%20CA%2090006%2C%20USA!5e0!3m2!1sen!2sca!4v1680297860984!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>        </div>
     </main>
 
     <footer>
@@ -62,6 +92,6 @@
         </div>
     </footer>
 
-    <script src="scripts/index.js"></script>
+    <!-- <script src="scripts/index.js"></script> -->
 </body>
 </html>
