--- a/projects/Final project/index.html
+++ b/projects/Final project/index.html
@@ -84,7 +84,7 @@
         </div>
         <div id="number-div"> 
             <!-- TODO: Use code in js to add ordered by {person's name} -->
-            <p>Current Number of drinks ordered</p> 
+            <p id="drinks-text">Current Number of drinks ordered</p> 
             <p id="drinks-number">0</p>
         </div>
     </main>
