--- a/projects/Final project/resource.html
+++ b/projects/Final project/resource.html
@@ -56,6 +56,8 @@
             <p>Favicon: Nicola.fox, favicon.cc</p>
             <p>Coast image: Justine Stuttard, flickr </p>
             <p>Smoothie image: Zouhir kharmaz, flickr</p>
+            <p>Fruit basket image: John, flickr</p>
+            <p>Second smoothie image: Mariah Coffman, flickr</p>
             <p>Weather information: Open weather </p>
             <p>Logo: Looka </p>
         </div>
