--- a/projects/Final project/about-us.html
+++ b/projects/Final project/about-us.html
@@ -81,17 +81,22 @@
     </main>
 
     <footer>
-        <h1> Contact us </h1>
-        <hr>
-        <div> 
-            <p>Bountiful Foods</p>
-            <p>Adress: 1645 S Vermont Ave</p>
-            <p>Los Angeles, CA 90007, United States</p>
-            <p>Phone number: 323-759-8873</p>
-            <a href="resource.html">References</a>
+        <div id="footer-box">
+            <h1> Contact us </h1>
+            <hr>
+            <div> 
+                <p>Bountiful Foods</p>
+                <p>Adress: 1645 S Vermont Ave</p>
+                <p>Los Angeles, CA 90007, United States</p>
+                <p>Phone number: 323-759-8873</p>
+                <a href="resource.html">References</a>
+            </div>
+        </div>
+        <div id="time-stamp-div">
+            <p>Last modification: <span id="dynamic-time-stamp"></span></p>
         </div>
     </footer>
 
-    <!-- <script src="scripts/index.js"></script> -->
+    <script src="scripts/time-stamp.js"></script>
 </body>
 </html>
