Added lazy loading and fixed timestamp

--- a/projects/Final project/fresh.html
+++ b/projects/Final project/fresh.html
@@ -50,7 +50,7 @@
 
         <div id="fresh-title-div">
             <h1 id="fresh-title">Make your perfect Smoothie!</h1>
-            <img src="images/photos/fresh-smoothie.png" alt="smoothie">
+            <img src="images/photos/placeholder.gif" data-src="images/photos/fresh-smoothie.png" alt="smoothie" loading="lazy">
         </div>
 
         <div id="ingredients-div">
