--- a/projects/Final project/index.html
+++ b/projects/Final project/index.html
@@ -48,7 +48,7 @@
 
     <main id="index-main">
         <div id="coastal-div"> 
-            <img src="images/photos/coast.png" alt="coast-image">
+            <img src="images/photos/placeholder.gif" data-src="images/photos/coast.png" alt="coast-image" loading="lazy">
             <p>Los Angels is a beautiful city, the second largest in the United States of America
                 and home to the hollywood empire. But no cinematic action can compare to the beautiy 
                 of the lush farmlands across spread out along the brimy blue Pacific. Our produce is 
@@ -59,13 +59,13 @@
             <div id="weather-box">
                 <h1>Weather</h1>
                 <div id="top-weather">
-                    <img src="images/Icons/logo.png" alt="empty" id="weather-icon">
-                    <span id="wind-temp"></span>
+                    <img src="images/Icons/weather.png" alt="empty" id="weather-icon">
+                    <span id="wind-temp">?</span>
                 </div>
                 <div id="middle-weather"> 
                     <span id="weather-type"></span>
                     <hr>
-                    <span id="humidity"></span>
+                    <span id="humidity">No Weather Data</span>
                 </div>
             </div>
             <section id="weather-section"> 
@@ -73,7 +73,7 @@
             </section>
         </div>
         <div id="fruit-div">
-            <img id="fruit-img" src="images/photos/smoothie.png">
+            <img src="images/photos/placeholder.gif" id="fruit-img" data-src="images/photos/smoothie.png" loading="lazy">
             <p id="fruit-paragraph">Above are two of our most satisfying beverages, zesty mango, and berry blend. 
                 Bountiful foods offers a collection of farm grown smoothie options, full of 
                 nutritious organic ingredients, and a punch of flavor. These will keep your health
