--- a/projects/Final project/resource.html
+++ b/projects/Final project/resource.html
@@ -60,6 +60,7 @@
             <p>Second smoothie image: Mariah Coffman, flickr</p>
             <p>Weather information: Open weather </p>
             <p>Logo: Looka </p>
+            <p>Weather Icon: Freepik, flaticon</p>
         </div>
     </main>
 
