--- a/projects/Final project/about-us.html
+++ b/projects/Final project/about-us.html
@@ -50,7 +50,7 @@
         <!-- ! This whole page is supposed to act as a sort of short advertisment to show off why Bountiful Foods is such a good company.  -->
         <div>
             <h1>Bountiful Foods</h1>
-            <img id="fruit-basket-img" src="images/photos/fruit-basket.jpg" alt="fruit-basket">
+            <img id="fruit-basket-img" src="images/photos/placeholder.gif" data-src="images/photos/fruit-basket.jpg" alt="fruit-basket" loading="lazy">
             <p>For the past 50 years bountiful foods has helped local farmers help market 
                 fresh produce from the green coasts of Los Angeles. We have had a great impact
                 on the health and lively hood of people all throughout the Western states. 
@@ -97,6 +97,7 @@
         </div>
     </footer>
 
+    <script src="scripts/about-us.js"></script>
     <script src="scripts/time-stamp.js"></script>
 </body>
 </html>
