Added the final project link.

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 <li>Discover Page:<a href="projects/chamber/discover.html">Second Week 7 Activity</a></li>
                 <li>Lesson 08: <a href="projects/lesson8/tablebuild.html">Week 8 Activity</a></li>
                 <li>Lesson 09: <a href="projects/lesson09/prophets.html">Week 9 Activity</a></li>
+                <li>Final Project: <a href="projects/final-project/"> Week 14 submission</a></li>
             </ul>
             <hr>
         </div>
