changed ul to div

--- a/projects/final-project/index.html
+++ b/projects/final-project/index.html
@@ -21,7 +21,7 @@
         <img class="logo" src="images/icons/logo.png" alt="Logo image">
 
         <hr class="mediumline">
-        <ul class="primaryNav">
+        <div class="primaryNav">
             <li><a href="index.html">Home</a></li>
             <hr class="baseline">
 
@@ -30,7 +30,7 @@
                 <li><a href="fresh.html">Fresh</a></li>
             </div>
             
-        </ul>
+        </div>
         <hr class="mediumline">
 
         <dic class="icons">
