Fixed errors in header.

--- a/projects/final-project/fresh.html
+++ b/projects/final-project/fresh.html
@@ -21,19 +21,19 @@
         <img class="logo" src="images/icons/logo.png" alt="Logo image">
 
         <hr class="mediumline">
-        <ul class="primaryNav">
-            <li><a href="index.html">Home</a></li>
+        <div class="primaryNav">
+            <p><a href="index.html">Home</a></p>
             <hr class="baseline">
 
             <div class="lowerNav">
-                <li><a href="about-us.html">About us</a></li>
-                <li><a href="fresh.html">Fresh</a></li>
+                <p><a href="about-us.html">About us</a></p>
+                <p><a href="fresh.html">Fresh</a></p>
             </div>
             
-        </ul>
+        </div>
         <hr class="mediumline">
 
-        <dic class="icons">
+        <div class="icons">
             <a class="facebook" href="https://www.facebook.com/" target="_blank">
                 <img src="images/icons/facebook.png" alt="facebook icon">
             </a>
@@ -43,7 +43,7 @@
             <a class="linkedin" href="https://www.linkedin.com/" target="_blank">
                 <img src="images/icons/linkedin.png" alt="linkedin icon">
             </a>
-        </dic>
+        </div>
     </header>
 
     <main id="fresh-main">
