--- a/projects/final-project/index.html
+++ b/projects/final-project/index.html
@@ -22,18 +22,18 @@
 
         <hr class="mediumline">
         <div class="primaryNav">
-            <li><a href="index.html">Home</a></li>
+            <p><a href="index.html">Home</a></p>
             <hr class="baseline">
 
             <div class="lowerNav">
-                <li><a href="about-us.html">About us</a></li>
-                <li><a href="fresh.html">Fresh</a></li>
+                <p><a href="about-us.html">About us</a></p>
+                <p><a href="fresh.html">Fresh</a></p>
             </div>
             
         </div>
         <hr class="mediumline">
 
-        <dic class="icons">
+        <div class="icons">
             <a class="facebook" href="https://www.facebook.com/" target="_blank">
                 <img src="images/icons/facebook.png" alt="facebook icon">
             </a>
@@ -43,7 +43,7 @@
             <a class="linkedin" href="https://www.linkedin.com/" target="_blank">
                 <img src="images/icons/linkedin.png" alt="linkedin icon">
             </a>
-        </dic>
+        </div>
     </header>
 
     <main id="index-main">
@@ -73,7 +73,7 @@
             </section>
         </div>
         <div id="fruit-div">
-            <img src="images/photos/placeholder.gif" id="fruit-img" data-src="images/photos/smoothie.png" loading="lazy">
+            <img src="images/photos/placeholder.gif" id="fruit-img" data-src="images/photos/smoothie.png" alt="fruit image" loading="lazy">
             <p id="fruit-paragraph">Above are two of our most satisfying beverages, zesty mango, and berry blend. 
                 Bountiful foods offers a collection of farm grown smoothie options, full of 
                 nutritious organic ingredients, and a punch of flavor. These will keep your health
