Fixed resource page error

--- a/projects/final-project/about-us.html
+++ b/projects/final-project/about-us.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="This is the main page of the Bountiful foods business website.
-    It is meant to entice customers to take an interest in the goods and services provided.">
+    <meta name="description" content="I like to think of this as the advertisment page. This is 
+    where people get a good impression of what bountiful foods is. And what it stands for.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&family=Tangerine&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
     <link type="text/css" rel="stylesheet" href="styles/medium.css">
     <link type="text/css" rel="stylesheet" href="styles/large.css">
     <link rel="icon" href="images/Icons/favicon.ico">
-    <title>BountifulFoodsHome</title>
+    <title>About us page</title>
 </head>
 <body>
     <header>
