fixed header elements

--- a/projects/final-project/fresh.html
+++ b/projects/final-project/fresh.html
@@ -53,14 +53,14 @@
         </div>
 
         <div id="ingredients-div">
-            <h1>ingredients</h1>
+            <h4 id="ingredients-title">ingredients</h4>
             <article>
 
             </article>
         </div>
 
         <div id="smoothie-div">
-            <h1>Blend</h1>
+            <h3 id="blend-title">Blend</h3>
             <form id="fresh-forum" action="processed.html" method="get">
                 <div class="first-group">
                     <label for="first-name">First Name:</label>
