font size changes, and smallest veiwport accesabul

--- a/projects/final-project/about-us.html
+++ b/projects/final-project/about-us.html
@@ -51,7 +51,7 @@
         <div>
             <h1>Bountiful Foods</h1>
             <img id="fruit-basket-img" src="images/photos/placeholder.gif" data-src="images/photos/fruit-basket.jpg" alt="fruit-basket" loading="lazy">
-            <p>For the past 50 years bountiful foods has helped local farmers help market 
+            <p class="larger-text">For the past 50 years bountiful foods has helped local farmers help market 
                 fresh produce from the green coasts of Los Angeles. We have had a great impact
                 on the health and lively hood of people all throughout the Western states. 
                 We have a strong culture of commitment and responsibility. And our partners have 
@@ -62,17 +62,17 @@
             <hr id="about-us-divider">
             <h3>Contact information</h3>
             <div>
-                <p>Hellen Mcgregory: CEO</p>
+                <p class="larger-text">Hellen Mcgregory: CEO</p>
                 <p>Email: Hellengory@gmail.com</p>
                 <p>Phone number: 323-583-4892</p>
             </div>
             <div>
-                <p>Person Mann: Human resources manager</p>
+                <p class="larger-text">Person Mann: Human resources manager</p>
                 <p>Email: Permann@gmail.com</p>
                 <p>Phone number: 323-293-2357</p>
             </div>
             <div>
-                <p>Jamie Hennnings: Vice President</p>
+                <p class="larger-text">Jamie Hennnings: Vice President</p>
                 <p>Email: Catwild@hotmail.com</p>
                 <p>Phone number: 323-294-1569</p>
             </div>
