--- a/projects/final-project/index.html
+++ b/projects/final-project/index.html
@@ -49,7 +49,7 @@
     <main id="index-main">
         <div id="coastal-div"> 
             <img src="images/photos/placeholder.gif" data-src="images/photos/coast.png" alt="coast-image" loading="lazy">
-            <p>Los Angels is a beautiful city, the second largest in the United States of America
+            <p class="larger-text">Los Angels is a beautiful city, the second largest in the United States of America
                 and home to the hollywood empire. But no cinematic action can compare to the beautiy 
                 of the lush farmlands across spread out along the brimy blue Pacific. Our produce is 
                 grown near the shine of these beaches, and the smell of salt in the air. 
@@ -74,7 +74,7 @@
         </div>
         <div id="fruit-div">
             <img src="images/photos/placeholder.gif" id="fruit-img" data-src="images/photos/smoothie.png" alt="fruit image" loading="lazy">
-            <p id="fruit-paragraph">Above are two of our most satisfying beverages, zesty mango, and berry blend. 
+            <p id="fruit-paragraph" class="larger-text">Above are two of our most satisfying beverages, zesty mango, and berry blend. 
                 Bountiful foods offers a collection of farm grown smoothie options, full of 
                 nutritious organic ingredients, and a punch of flavor. These will keep your health
                 and your tastebuds happy. Beyond premade classic smoothies, we encourage designing 
