--- a/projects/final-project/index.html
+++ b/projects/final-project/index.html
@@ -80,7 +80,7 @@
                 and your tastebuds happy. Beyond premade classic smoothies, we encourage designing 
                 your own delightful drinks. 
             </p>
-            <button id="drinks-button" onclick="window.location.href='fresh.html'">Get drink here!</button>
+            <button id="drinks-button" onclick="window.location.href='fresh.html'">Get drinks here!</button>
         </div>
         <div id="number-div"> 
             <!-- TODO: Use code in js to add ordered by {person's name} -->
